--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,30 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
-            android:name=".Navigator"
+            android:name=".Start"
+            android:parentActivityName=".MainPage"
+            android:exported="true"/>
+        <activity
+            android:name=".Save"
+            android:parentActivityName=".MainPage"
+            android:exported="true"/>
+        <activity
+            android:name=".Button1"
+            android:parentActivityName=".MainPage"
+            android:exported="true"/>
+        <activity
+            android:name=".Button2"
+            android:parentActivityName=".MainPage"
+            android:exported="true"/>
+        <activity
+            android:name=".MainPage"
+
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".Navigation"
+
             android:exported="true">
         </activity>
     </application>
