--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,25 +30,20 @@
         </activity>
         <activity
             android:name=".Start"
-            android:parentActivityName=".MainPage"
+            android:parentActivityName=".Navigation"
             android:exported="true"/>
         <activity
             android:name=".Save"
-            android:parentActivityName=".MainPage"
+            android:parentActivityName=".Navigation"
             android:exported="true"/>
         <activity
             android:name=".Button1"
-            android:parentActivityName=".MainPage"
+            android:parentActivityName=".Navigation"
             android:exported="true"/>
         <activity
             android:name=".Button2"
-            android:parentActivityName=".MainPage"
+            android:parentActivityName=".Navigation"
             android:exported="true"/>
-        <activity
-            android:name=".MainPage"
-
-            android:exported="true">
-        </activity>
         <activity
             android:name=".Navigation"
 
