--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:parentActivityName=".Navigation"
             android:exported="true"/>
         <activity
-            android:name=".Button1"
+            android:name=".Inventory"
             android:parentActivityName=".Navigation"
             android:exported="true"/>
         <activity
