[WIP] STEP PROGRESS BAR

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    viewBinding
+            {
+                enabled=true
+            }
+
 }
 
 dependencies {
 
-    implementation 'com.github.shuhart:stepview:1.5.1'
+    implementation 'com.shuhart.stepview:stepview:1.5.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
