--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    viewBinding
+            {
+                enabled=true
+            }
+
 }
 
 dependencies {
