--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,18 @@ android {
                 enabled=true
             }
 
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.1.1"
+    }
 }
 
 dependencies {
-
-    implementation 'com.shuhart.stepview:stepview:1.5.1'
+    implementation 'com.google.android.material:material:1.9.0-alpha02'
+    implementation 'com.github.shuhart:stepview:1.5.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
