--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ android {
 }
 
 dependencies {
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta1"
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation "androidx.constraintlayout:constraintlayout:2.2.0-alpha08"
     implementation 'com.google.android.material:material:1.9.0-alpha02'
     implementation 'com.github.shuhart:stepview:1.5.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
