--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,9 +44,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.volley:volley:1.2.1'
-    implementation "androidx.constraintlayout:constraintlayout:2.2.0-alpha08"
-    implementation 'com.google.android.material:material:1.9.0-alpha02'
+    implementation "io.getstream:avatarview-coil:1.0.7"
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation "androidx.constraintlayout:constraintlayout:2.2.0-alpha09"
+    implementation 'com.google.android.material:material:1.9.0-beta01'
     implementation 'com.github.shuhart:stepview:1.5.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
